--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -23,7 +23,7 @@ h2 {
 
 .navbar {
     background: #999999;
-    height: 230px;
+    height:max-content;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,6 +31,8 @@ h2 {
     position: sticky;
     top: 0;
     z-index: 999;
+    height:12vw;
+    
 }
 
 .logo img {
@@ -74,20 +76,22 @@ h2 {
     width: 55%;
     position:relative;
     display:inline-block;
+    width:fit-content;
 }
 
 .engcfgform select {
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .orderform {
      width: 55%;
     position:relative;
     display:inline-block;
+    width:fit-content;
 }
 
 .orderform select {
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .right__box {
@@ -97,11 +101,15 @@ h2 {
     margin:0px;
 }
 
+.right__box h2{
+    
+}
+
 .waveformcontainer{
     border:1px solid black;
     background-color: grey;
 }
 
 .waveformcontainer h1 {
-    font-size:100px;
+    font-size:7rem;
 }
