--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -1,5 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
     background: #D3D3D3;
+    height: 100%;
+    margin: 0;
 }
 
 .title_text {
@@ -13,12 +19,6 @@ h1 {
     font-size: 400%;
     color: rgb(255, 80, 71);
     text-align: center;
-}
-
-h2 {
-    font-size: 140%;
-    color: black;
-    display:inline-block;
 }
 
 .navbar {
@@ -53,30 +53,76 @@ h2 {
     width: 50%;
 }
 
-.left__box {
-    float: left;
-    width: 40%;
+.left-right-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    min-height: 600px;
+}
+
+.measurements-title {
+    display: flex;
+    justify-content: center;
+}
+
+.left-box {
+    width: 30vw;    
+}
+
+.left-box h3 {
+    margin: 0;
+}
+
+.left-box p { 
+    font-size: 1.5em;
+    margin: 0;
+}
+
+.left-container {
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid black;
+    height: 40vh;
+    min-height: 500px;
     padding-left: 5%;
-    margin:0px;
+    padding-right: 5%;
 }
 
-.left__box h3 {
-    display:inline-block;
+.left-container h3 {
+    align-self: center;
+    flex: 1 0 60%;
+    height: 10px;
+    margin: 0.2em;
 }
 
-.left__box p { 
-    display:inline-block;
+.left-container p {
+    align-self: center;
+    font-size: 2em;
+    height: 10px;
+    margin: 0.2em;
 }
 
-.left__container {
-    border:1px solid black;
+.start-stop-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.start-stop-container button {
+    font-size: 2em;
+}
+
+.engine-parameters {
+    display: flex;
+    align-content: row;
 }
 
 .engcfgform {
     width: 55%;
-    position:relative;
-    display:inline-block;
+    display: flex;
+    align-content: row;
     width:fit-content;
+    padding-right: 10%;
 }
 
 .engcfgform select {
@@ -84,32 +130,34 @@ h2 {
 }
 
 .orderform {
-     width: 55%;
-    position:relative;
-    display:inline-block;
+    width: 55%;
+    display: flex;
+    align-content: row;
     width:fit-content;
+}
+
+.orderform form, .engcfgform form {
+    display: flex;
+    align-items: center;
 }
 
 .orderform select {
     font-size: 1rem;
 }
 
-.right__box {
-    float: right;
-    width: 40%;
-    padding-right: 5%;
+.right-box {
+    width: 60vw;
     margin:0px;
-}
-
-.right__box h2{
-    
 }
 
 .waveformcontainer{
     border:1px solid black;
     background-color: grey;
+    height: 40vh;
+    min-height: 500px;
 }
 
-.waveformcontainer h1 {
-    font-size:7rem;
+#glCanvas {
+    width: 100%;
+    height: 100%;
 }
