--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -1,11 +1,25 @@
 html {
     height: 100%;
+    min-width:750px;
 }
 
+:root,
+    :root.light {
+    --bg-color:rgb(255, 255, 255);
+    --text-color:black;
+    --nav-color:#444444;
+    --lcontainer-color: white;
+    --startstop-color:#5a5a5a;
+    }
+    
+
 body {
-    background: #D3D3D3;
+    background: var(--bg-color);
+    color: var(--text-color);
     height: 100%;
     margin: 0;
+    min-width: 750px;
+    
 }
 
 .title_text {
@@ -22,7 +36,7 @@ h1 {
 }
 
 .navbar {
-    background: #999999;
+    background: var(--nav-color);
     height:max-content;
     display: flex;
     justify-content: center;
@@ -31,7 +45,7 @@ h1 {
     position: sticky;
     top: 0;
     z-index: 999;
-    height:12vw;
+    height:8vw;
     
 }
 
@@ -49,15 +63,50 @@ h1 {
 .logo {
     position: absolute;
     top: 0;
-    left: 40%;
-    width: 50%;
+    left:43%;
+    width: 30%;
 }
+
+.version{
+    position: absolute;
+    bottom:0;
+    left: 55%;
+    color:white;
+}
+
+.preferences-container {
+    position:absolute;
+    display: inline-block;
+    cursor: pointer;
+    z-index: 1000;
+    left: 5%;
+}
+
+.prefBtn-container {
+    position:absolute;
+    display:flex;
+    left: 5%;
+}
+
+button.prefBtnStyle {
+    font-size: 1em;
+    background-color:#da0101;
+    padding: 0.5em 0.5em;
+    font-weight: bold;
+    color: rgb(199, 198, 198);
+    opacity: 75%;
+}
+
 
 .left-right-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    min-height: 600px;
+    /*min-height: 600px;*/
+    margin-left: auto;
+    margin-right: auto;
+    overflow-y:scroll;
+    
 }
 
 .measurements-title {
@@ -71,21 +120,23 @@ h1 {
 
 .left-box h3 {
     margin: 0;
+    max-width:50%;
+    white-space: nowrap;
 }
 
-.left-box p { 
-    font-size: 1.5em;
-    margin: 0;
-}
+
 
 .left-container {
     display: flex;
     flex-wrap: wrap;
     border: 1px solid black;
     height: 40vh;
-    min-height: 500px;
     padding-left: 5%;
     padding-right: 5%;
+    background-color: var(--lcontainer-color);
+    position:relative;
+    float:left;
+    justify-content: space-between;
 }
 
 .left-container h3 {
@@ -97,19 +148,40 @@ h1 {
 
 .left-container p {
     align-self: center;
-    font-size: 2em;
-    height: 10px;
+    font-size: 1.5em;
+    height: 2%;
     margin: 0.2em;
+    
 }
 
 .start-stop-container {
     display: flex;
     flex-direction: row;
+    flex: 1 0 60%;
     justify-content: space-around;
+
 }
 
 .start-stop-container button {
-    font-size: 2em;
+    color: rgb(255, 255, 255);
+    background-color: var(--startstop-color);
+    border: 2%;
+    border-color:#444444;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1em;
+    border-radius: 5%;
+    margin: 1rem;
+    width: 8rem;
+    vertical-align:bottom;
+    vertical-align: middle;
+}
+
+h2 {
+    font-size:1.0vw;
+
 }
 
 .engine-parameters {
@@ -118,43 +190,46 @@ h1 {
 }
 
 .engcfgform {
-    width: 55%;
     display: flex;
     align-content: row;
     width:fit-content;
     padding-right: 10%;
+    
 }
 
 .engcfgform select {
-    font-size: 1rem;
+    font-size: 1.2rem;
+    height:fit-content;
+    max-height:2.8vw;
 }
 
 .orderform {
-    width: 55%;
     display: flex;
     align-content: row;
-    width:fit-content;
+    width:fit-content;  
 }
 
 .orderform form, .engcfgform form {
     display: flex;
     align-items: center;
+    margin:0px;
 }
 
 .orderform select {
-    font-size: 1rem;
+    font-size: 1.3rem;
+    height:fit-content;
+    max-height:2.8vw;
 }
 
 .right-box {
-    width: 60vw;
+    width: 60%;
     margin:0px;
 }
 
 .waveformcontainer{
+    display:flex;
     border:1px solid black;
-    background-color: grey;
-    height: 40vh;
-    min-height: 500px;
+    background-color: rgb(255, 255, 255);
 }
 
 #glCanvas {
