--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -105,7 +105,7 @@ h1 {
 .start-stop-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    width: 30vh;
 }
 
 .start-stop-container button {
@@ -158,6 +158,5 @@ h1 {
 }
 
 #glCanvas {
-    width: 100%;
-    height: 100%;
+    display: block;
 }
