graph now has grid

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -100,7 +100,7 @@ button.prefBtnStyle {
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    overflow-y:scroll;
+    /*overflow-y:scroll;*/
 }
 
 .measurements-title {
