--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -1,5 +1,9 @@
 html {
     height: 100%;
+    font-family: Raleway, ubuntu, sans-serif;
+    overflow: hidden;
+    line-height: 1.6;
+
 }
 
 :root,
