--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -21,7 +21,8 @@ body {
     color: var(--text-color);
     height: 100%;
     margin: 0;
-    min-width: 800px;
+    overflow-x:hidden;
+    overflow-y:auto;
 }
 
 .title_text {
@@ -33,7 +34,6 @@ body {
 
 h1 {
     font-size: 400%;
-    color: rgb(255, 80, 71);
     text-align: center;
 }
 
@@ -47,7 +47,7 @@ h1 {
     position: sticky;
     top: 0;
     z-index: 999;
-    height: 8vw;
+    height: 16vw;
 }
 
 .logo img {
@@ -57,22 +57,23 @@ h1 {
     right: auto;
     align-items: center;
     size: auto;
-    width: 50%;
-    size: 100%;
+    width: 80%;
+    
 }
 
 .logo {
     position: absolute;
     top: 0;
-    left: 43%;
-    width: 30%;
+    left: 37%;
+    width: 40%;
 }
 
 .version {
     position: absolute;
     bottom: 0;
-    left: 55%;
+    left: 63%;
     color: white;
+    font-size: 1vw;
 }
 
 .preferences-container {
@@ -90,7 +91,7 @@ h1 {
 }
 
 button.prefBtnStyle {
-    font-size: 1em;
+    font-size: 2vw;
     background-color: #da0101;
     padding: 0.5em 0.5em;
     font-weight: bold;
@@ -100,30 +101,24 @@ button.prefBtnStyle {
 
 .left-right-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    /*overflow-y:scroll;*/
 }
 
 .measurements-title {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 6vw;
     margin-bottom: 5px;
 }
-
-.left-box {
-    width: 30vw;
+@media only screen and (max-width: 786px) {
+    .left-box {
+        width: 80%;
+        margin-left: 10%;
+    }
 }
-
-.left-box h3 {
-    margin: 0;
-    max-width: 50%;
-    white-space: nowrap;
-}
-
 .left-container {
     display: flex;
     flex-wrap: wrap;
@@ -141,14 +136,14 @@ button.prefBtnStyle {
     align-self: center;
     flex: 1 0 60%;
     height: 10px;
-    margin: 0.2em;
+    font-size: 3vw;
 }
 
 .left-container p {
     align-self: center;
-    font-size: 1.5em;
+    font-size: 3vw;
     height: 2%;
-    margin: 0.2em;
+
 }
 
 .start-stop-container {
@@ -163,7 +158,7 @@ button.prefBtnStyle {
     background-color: var(--startstop-color);
     border: 2%;
     border-color: #444444;
-    padding: 1rem 2rem;
+    padding: 0.8vw 2vw;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -176,40 +171,45 @@ button.prefBtnStyle {
 }
 
 h2 {
-    font-size: 1.0vw;
-
+    font-size: 3.0vw;
 }
+
 
 .engine-parameters {
     display: flex;
-    align-content: row;
+    flex-direction: column;
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
+
+
 
 .engcfgform,
 .orderform,
 .inputform {
     display: flex;
-    align-content: row;
-    width: fit-content;
-    margin: auto;
+    flex-direction: row;
+    width: 80vw;
+    margin-left: 17%;
+    margin-right:0px;
+    margin-bottom: 2vw;
 }
 
 .orderform form,
 .engcfgform form,
 .inputform form {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    margin: 0px;
-    margin-left: 10px;
 }
 
 .engcfgform select,
 .orderform select,
 .inputform select {
+    display: flex;
+    flex-direction: row;
     height: fit-content;
-    max-height: 2.8vw;
+    max-height: 8vw;
 }
 
 .right-box {
@@ -221,8 +221,330 @@ h2 {
     display: flex;
     border: 1px solid black;
     background-color: rgb(255, 255, 255);
+    margin-left:10%;
+    width:fit-content;
+    width:87vw;
 }
 
 #glCanvas {
     display: block;
+}
+
+.footer {
+    height:2vw;
+}
+
+@media only screen and (min-width: 786px) and  (max-width: 971px){
+    
+    .navbar {
+        background: var(--nav-color);
+        height: max-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+        height: 8vw;
+    }
+    
+    .logo img {
+        position: absolute;
+        top: 0;
+        left: auto;
+        right: auto;
+        align-items: center;
+        size: auto;
+        width: 50%;
+        size: 100%;
+    }
+    
+    .logo {
+        position: absolute;
+        top: 0;
+        left: 43%;
+        width: 30%;
+    }
+    
+    .version {
+        position: absolute;
+        bottom: 0;
+        left: 55%;
+        color: white;
+        font-size: 1vw;
+    }
+    
+    .preferences-container {
+        position: absolute;
+        display: inline-block;
+        cursor: pointer;
+        z-index: 1000;
+        left: 5%;
+    }
+    
+    .prefBtn-container {
+        position: absolute;
+        display: flex;
+        left: 5%;
+    }
+    
+    button.prefBtnStyle {
+        font-size: 1vw;
+        background-color: #da0101;
+        padding: 0.5em 0.5em;
+        font-weight: bold;
+        color: rgb(199, 198, 198);
+        opacity: 75%;
+    }
+    
+    .left-right-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        margin-left: none;
+        margin-right: none;
+        /*overflow-y:scroll;*/
+    }
+    
+    .measurements-title {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    
+    .left-box {
+        width: 25vw;
+        margin-left:1vw;
+        margin-top:12.5vw;
+    }
+    
+    .left-container h3 {
+        align-self: center;
+        flex: 1 0 60%;
+        height: 10px;
+        margin: 0.2em;
+        font-size: 1.6vw;
+    }
+    
+    .left-container p {
+        align-self: center;
+        font-size: 1.6vw;
+        height:0%;
+    }
+    
+    h2 {
+        font-size: 1.8vw;
+    }
+    
+    .engine-parameters {
+        display: flex;
+        flex-direction: row;
+        margin-top: 1vw;
+        margin-bottom: -1vw;
+        width: 100vw;
+        position: relative;
+        left: calc(-65vw + 50%);
+    }
+    
+    .engcfgform,
+    .orderform,
+    .inputform {
+        display: flex;
+        flex-direction: column;
+        width:11vw;
+    }
+
+    .orderform form,
+    .engcfgform form,
+    .inputform form {
+        align-items: center;
+        margin: 0px;
+        margin-right:1vw;
+    }
+
+
+    .engcfgform select,
+    .orderform select,
+    .inputform select {
+        display:inline-block;
+        flex-direction:row;
+        height: fit-content;
+        max-height: 2.8vw;
+    }
+    
+    .waveformcontainer {
+        display: flex;
+        border: 1px solid black;
+        background-color: rgb(255, 255, 255);
+        width: 72vw;
+        margin-left: 1vw;
+    }
+}
+
+@media only screen and (min-width: 971px) {
+
+    body {
+        background: var(--bg-color);
+        color: var(--text-color);
+        height: 100%;
+        margin: 0;
+    }
+    
+    .navbar {
+        background: var(--nav-color);
+        height: max-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+        height: 8vw;
+    }
+    
+    .logo img {
+        position: absolute;
+        top: 0;
+        left: auto;
+        right: auto;
+        align-items: center;
+        size: auto;
+        width: 50%;
+        size: 100%;
+    }
+    
+    .logo {
+        position: absolute;
+        top: 0;
+        left: 43%;
+        width: 30%;
+    }
+    
+    .version {
+        position: absolute;
+        bottom: 0;
+        left: 55%;
+        color: white;
+        font-size: 1vw;
+    }
+    
+    .preferences-container {
+        position: absolute;
+        display: inline-block;
+        cursor: pointer;
+        z-index: 1000;
+        left: 5%;
+    }
+    
+    .prefBtn-container {
+        position: absolute;
+        display: flex;
+        left: 5%;
+    }
+    
+    button.prefBtnStyle {
+        font-size: 1vw;
+        background-color: #da0101;
+        padding: 0.5em 0.5em;
+        font-weight: bold;
+        color: rgb(199, 198, 198);
+        opacity: 75%;
+    }
+    
+    .left-right-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        /*overflow-y:scroll;*/
+    }
+    
+    .measurements-title {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    
+    .left-box {
+        width: 30vw;
+    }
+    
+    .left-box h3 {
+        margin: 0;
+        max-width: 50%;
+        white-space: nowrap;
+    }
+    
+    .left-container {
+        display: flex;
+        flex-wrap: wrap;
+        border: 1px solid black;
+        height: 40vh;
+        padding-left: 5%;
+        padding-right: 5%;
+        background-color: var(--lcontainer-color);
+        position: relative;
+        float: left;
+        justify-content: space-between;
+    }
+    
+    .left-container h3 {
+        align-self: center;
+        flex: 1 0 60%;
+        height: 3.1%;
+        margin-left: 0.2em;
+        font-size: 1.4vw;
+    }
+    
+    .left-container p {
+        align-self: center;
+        font-size: 1.4vw;
+        height: 0%;
+        margin-right: 0.2em;
+    }
+    
+    h2 {
+        font-size: 1.0vw;
+    
+    }
+    
+    .engine-parameters {
+        display: flex;
+        flex-direction: row;
+        align-content: row;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    
+    .engcfgform,
+    .orderform,
+    .inputform {
+        display: flex;
+        align-content: row;
+        width: fit-content;
+        margin: auto;
+    }
+    
+    .orderform form,
+    .engcfgform form,
+    .inputform form {
+        display: inline-block;
+        align-items: center;
+        margin: 0px;
+        margin-left: 10px;
+    }
+    
+    .waveformcontainer {
+        display: flex;
+        border: 1px solid black;
+        background-color: rgb(255, 255, 255);
+        width: 63vw;
+        margin-left:1vw;
+    }
+    
 }
