--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -6,6 +6,32 @@ html {
 
 }
 
+ul {
+    list-style-type: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    background-color: #666369;
+}
+
+li {
+    float: left;
+    width: 33%;
+}
+
+li a {
+    padding: 0px;
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
+li:hover {
+    background-color: #5669c9;
+}
+
 :root,
 :root.light {
     --bg-color: rgb(255, 255, 255);
@@ -38,13 +64,13 @@ h1 {
 }
 
 .navbar {
+    margin: 0;
     background: var(--nav-color);
     height: max-content;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: sticky;
     top: 0;
     z-index: 999;
     height: 16vw;
@@ -180,8 +206,8 @@ h2 {
 .engine-parameters {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 0px;
+    background-color: #666369;
 }
 
 
@@ -247,7 +273,6 @@ h2 {
         justify-content: center;
         align-items: center;
         font-size: 1.2rem;
-        position: sticky;
         top: 0;
         z-index: 999;
         height: 8vw;
@@ -345,8 +370,6 @@ h2 {
     .engine-parameters {
         display: flex;
         flex-direction: row;
-        margin-top: 1vw;
-        margin-bottom: -1vw;
         width: 100vw;
         position: relative;
         left: calc(-65vw + 50%);
@@ -403,7 +426,6 @@ h2 {
         justify-content: center;
         align-items: center;
         font-size: 1.2rem;
-        position: sticky;
         top: 0;
         z-index: 999;
         height: 8vw;
@@ -521,8 +543,6 @@ h2 {
         display: flex;
         flex-direction: row;
         align-content: row;
-        margin-top: 10px;
-        margin-bottom: 5px;
     }
 
     .engcfgform,
