--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -126,11 +126,14 @@ button.prefBtnStyle {
 }
 
 .left-right-container {
+    /*background: rgba(52, 87, 226, 0.85);*/
+    background: rgba(142, 138, 124, 0.7);
+    min-height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .measurements-title {
