--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -139,16 +139,20 @@ button.menu-button-style {
     font-weight: bold;
     color: rgb(199, 198, 198);
     opacity: 75%;
+    float: right;
 }
 
 .menu {
     right: 5%;
     position: absolute;
+    display: flex;
 }
 
 .menu-item {
     right: 5%;
     display: grid;
+    margin: 10px;
+    margin-top: 12px;
 }
 
 /***************/
