--- a/Frontend/css/styles-min-971.css
+++ b/Frontend/css/styles-min-971.css
@@ -5,6 +5,7 @@
         color: var(--text-color);
         height: 100%;
         margin: 0;
+        overflow: hidden;
     }
 
     .navbar {
@@ -151,12 +152,19 @@
         margin-left: 10px;
     }
 
+    #graph-canvas {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: -1;
+        display: block;
+    }
+
     .waveformcontainer {
         display: flex;
-        border: 1px solid black;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(255, 255, 255, 0);
         width: 63vw;
         margin-left: 1vw;
     }
-
 }
