--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -59,8 +59,8 @@ h1 {
     z-index: 100;
     width: 100%;
     text-align: center;
-    font-size: 1vw;
-    height: 2.5vw;
+    font-size: 2vw;
+    height: 5vw;
 }
 
 /***************/
@@ -152,7 +152,7 @@ button.prefBtnStyle {
 }
 
 button.menu-button-style {
-    font-size: 2vw;
+    font-size: 2.5vw;
     height: 50%;
     background-color: #da0101;
     padding: 0.5em 0.5em;
@@ -210,6 +210,7 @@ button.menu-button-style {
     display: flex;
     flex-wrap: wrap;
     border: 1px solid black;
+    min-width:100%;
     height: 40vh;
     padding-left: 5%;
     padding-right: 5%;
@@ -253,6 +254,7 @@ button.menu-button-style {
     border-radius: 5%;
     margin: 1rem;
     width: 8rem;
+    max-width: 22vw;
     vertical-align: bottom;
     vertical-align: middle;
 }
@@ -275,10 +277,8 @@ h2 {
 .waveformcontainer {
     display: flex;
     background-color: rgb(255, 255, 255, 0);
-    margin-left: 10%;
     flex-wrap: wrap;
     width: fit-content;
-    width: 87vw;
     padding-top: 10px;
 }
 
