--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -122,7 +122,8 @@ h1 {
     font-size: 1vw;
 }
 
-.preferences-container { /*DEAD*/
+.preferences-container {
+    /*DEAD*/
     position: absolute;
     display: inline-block;
     cursor: pointer;
@@ -211,7 +212,7 @@ button.menu-button-style {
     display: flex;
     flex-wrap: wrap;
     border: 1px solid black;
-    min-width:100%;
+    min-width: 100%;
     height: 40vh;
     padding-left: 5%;
     padding-right: 5%;
@@ -303,15 +304,19 @@ h2 {
 
 #graph-audio-1 {
     margin-right: 10px;
-    width: calc(50% - 5px)
+    width: calc(50% - 5px);
+    height: 300px;
 }
 
 #graph-audio-2 {
-    width: calc(50% - 5px)
+    width: calc(50% - 5px);
+    height: 300px;
 }
 
 #graph-rpm {
     margin-top: 10px;
+    height: 300px;
+    width: 100%;
 }
 
 #graph-info {
@@ -369,47 +374,4 @@ h2 {
     height: 100vh;
     z-index: -1;
     display: block;
-}
-
-/***************/
-/* Dead code? */
-/*************/
-
-.footer { /*DEAD*/
-    height: 2vw;
-}
-
-.engine-parameters { /*DEAD*/
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
-    background-color: #666369;
-}
-
-.engcfgform,/*DEAD*/
-.orderform,
-.inputform {
-    display: flex;
-    flex-direction: row;
-    width: 80vw;
-    margin-left: 17%;
-    margin-right: 0px;
-    margin-bottom: 2vw;
-}
-
-.orderform form,/*DEAD*/
-.engcfgform form,
-.inputform form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.engcfgform select, /*DEAD*/
-.orderform select,
-.inputform select {
-    display: flex;
-    flex-direction: row;
-    height: fit-content;
-    max-height: 8vw;
 }
