--- a/Frontend/css/styles-min-971.css
+++ b/Frontend/css/styles-min-971.css
@@ -149,7 +149,7 @@
     .left-container {
         display: flex;
         flex-wrap: wrap;
-        border: 1px solid black;
+        border: 4px solid silver;
         height: 40vh;
         padding-left: 5%;
         padding-right: 5%;
