--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -211,7 +211,7 @@ button.menu-button-style {
 .left-container {
     display: flex;
     flex-wrap: wrap;
-    border: 1px solid black;
+    border: 4px solid silver;
     min-width: 100%;
     height: 40vh;
     padding-left: 5%;
