color of hover + select

--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -64,10 +64,7 @@ h1 {
     background-color:white;
 }
 
-select:hover {
-    background-color:darkgray;
-}
-
+select:hover,
 select:disabled {
     background-color:lightgray;
 }
