--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -374,6 +374,14 @@ h2 {
     border: 4px solid silver;
 }
 
+.graph #graph-info:hover {
+    cursor: default;
+}
+
+.graph:hover {
+    cursor: none;
+}
+
 #graph-canvas {
     position: absolute;
     top: 0;
